GearsetPOC/force-app/main/default/objects/Survey_and_Assessment__c/Survey_and_Assessment__c.object-meta.xml
<CustomObject>
    <description>This object is needed for sending surveys to customers who have interacted with a contact center advisor via phone, email or web.</description>
    <label>Survey and Assessment</label>
    <nameField>
        <displayFormat>SA-{000000}</displayFormat>
        <label>Survey and Assessment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys and Assessments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>