GearsetPOC/force-app/main/default/objects/Survey_and_Assessment__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Surveys and Assessments</relationshipLabel>
    <relationshipName>Surveys_and_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>