GearsetPOC/force-app/main/default/objects/Survey_and_Assessment__c/fields/Case_fully_resolved__c.field-meta.xml
<CustomField>
    <fullName>Case_fully_resolved__c</fullName>
    <label>Case fully resolved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>