GearsetPOC/force-app/main/default/objects/Survey_and_Assessment__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surveys and Assessments</relationshipLabel>
    <relationshipName>Surveys_and_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>