GearsetPOC/force-app/main/default/objects/Survey_and_Assessment__c/fields/Internal_User__c.field-meta.xml
<CustomField>
    <fullName>Internal_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Surveys_and_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>