GearsetPOC/force-app/main/default/objects/Survey_and_Assessment__c/fields/Star_Rating_Comment__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating_Comment__c</fullName>
    <label>Star Rating Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>