GearsetPOC/force-app/main/default/objects/Survey_and_Assessment__c/fields/Star_Rating_Formula__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating_Formula__c</fullName>
    <formula>VALUE(TEXT(Star_Rating__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Star Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>