GearsetPOC/force-app/main/default/objects/Survey_and_Assessment__c/recordTypes/CSAT.recordType-meta.xml
<RecordType>
    <fullName>CSAT</fullName>
    <active>true</active>
    <label>CSAT</label>
</RecordType>