GearsetPOC/force-app/main/default/objects/Survey_and_Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Star_Rating__c</columns>
    <columns>Star_Rating_Comment__c</columns>
    <columns>QA_Assessment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case_fully_resolved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>